--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,9 @@ abstract: 'Perl module for structured errors for bioperl.'
 author:
   - 'Michal Špaček <skim@cpan.org>'
 build_requires:
+  English: 0
   ExtUtils::MakeMaker: 6.36
+  File::Object: 0.05
   Test::More: 0
   Test::NoWarnings: 0
   Test::Pod: 0
